--- a/Visit/app/src/main/res/layout/activity_main_printing.xml
+++ b/Visit/app/src/main/res/layout/activity_main_printing.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_brand_logo"
         android:layout_width="379dp"
         android:layout_height="399dp"
         app:srcCompat="?android:attr/fingerprintAuthDrawable"
@@ -34,6 +34,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_brand_logo" />
 
 </android.support.constraint.ConstraintLayout>
