--- a/Visit/app/src/main/res/layout/fragment_survey.xml
+++ b/Visit/app/src/main/res/layout/fragment_survey.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.sonu_pc.visit.fragments.SurveyFragment">
 
     <ImageView
-        android:id="@+id/imageView_brand"
+        android:id="@+id/iv_brand_logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="8dp"
