--- a/Visit/app/src/main/res/layout/fragment_thank_you.xml
+++ b/Visit/app/src/main/res/layout/fragment_thank_you.xml
@@ -19,10 +19,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_brand_logo" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_brand_logo"
         android:layout_width="249dp"
         android:layout_height="329dp"
         android:layout_marginBottom="8dp"
