--- a/Visit/app/src/main/res/layout/fragment_visitor_info.xml
+++ b/Visit/app/src/main/res/layout/fragment_visitor_info.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.sonu_pc.visit.fragments.VisitorInfoFragment">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_brand_logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="8dp"
