--- a/Visit/app/src/main/res/layout/fragment_welcome.xml
+++ b/Visit/app/src/main/res/layout/fragment_welcome.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.sonu_pc.visit.fragments.WelcomeFragment">
 
     <ImageView
-        android:id="@+id/imageViewLogo"
+        android:id="@+id/iv_brand_logo"
         android:layout_width="259dp"
         android:layout_height="329dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toBottomOf="@+id/iv_brand_logo"
         app:layout_constraintVertical_bias="0.354" />
 
 
