--- a/Visit/app/src/main/res/layout-w400dp/fragment_welcome.xml
+++ b/Visit/app/src/main/res/layout-w400dp/fragment_welcome.xml
@@ -23,11 +23,11 @@
 
     <Button
         android:id="@+id/button1"
+        style="@style/FirebaseUI.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorAccent"
         android:text="SIGNUP"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -54,14 +54,14 @@
 
     <Button
         android:id="@+id/button2"
+        style="@style/FirebaseUI.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+
         android:text="Button"
-        android:textColor="@android:color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,14 +70,13 @@
 
     <Button
         android:id="@+id/button3"
+        style="@style/FirebaseUI.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
         android:text="Button"
-        android:textColor="@android:color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
