--- a/Visit/app/src/main/res/layout/activity_main.xml
+++ b/Visit/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/title_warnings"
-            android:id="@+id/textView"
+            android:id="@+id/brand_logo"
             android:textColor="#000000" />
 
         <EditText
