--- a/Visit/app/src/main/res/layout/activity_voice_recognition_test.xml
+++ b/Visit/app/src/main/res/layout/activity_voice_recognition_test.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/ratingQues1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
