--- a/Visit/app/src/main/res/layout/fragment_survey.xml
+++ b/Visit/app/src/main/res/layout/fragment_survey.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:transitionName="@string/logo_transition_name"
-        app:layout_constraintBottom_toTopOf="@+id/textView1"
+        app:layout_constraintBottom_toTopOf="@+id/ratingQues1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/ratingQues1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
